[project]
name = "dodo-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.4.0",
    "pandas>=3.0.1",
    "pytesseract>=0.3.13",
    "supervision>=0.27.0.post2",
    "tesseract>=0.1.3",
    "ultralytics>=8.4.27",
]
